--- a/cms/templates/cms/base_tenant.html
+++ b/cms/templates/cms/base_tenant.html
@@ -62,6 +62,7 @@
                     <ul class="list-unstyled small text-muted">
                         {% if profile.contact_email %}<li class="mb-2">📧 {{ profile.contact_email }}</li>{% endif %}
                         {% if profile.contact_phone %}<li class="mb-2">📞 {{ profile.contact_phone }}</li>{% endif %}
+                        {% if profile.address %}<li>{{ profile.address }}</li>{% endif %}
                     </ul>
                 </div>
                 <div class="col-md-4">
