--- a/marketing/templates/marketing/template_select.html
+++ b/marketing/templates/marketing/template_select.html
@@ -10,8 +10,8 @@
         
         <div class="row justify-content-center mb-5">
             <div class="col-md-6">
-                <label for="companyNameInput" class="form-label small text-muted">Preview with your company name</label>
-                <input type="text" class="form-control form-control-lg text-center" id="companyNameInput" placeholder="e.g., Acme Recruitment" maxlength="50">
+                <label class="form-label small muted-text">Preview with your company name</label>
+                <input type="text" class="form-control form-control-lg text-center" id="companyNameInput" placeholder="e.g., Acme Recruitment">
             </div>
         </div>
         
