--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +15,14 @@
         <div class="container">
             {# Logo logic #}
             {% if request.tenant.schema_name == 'public' %}
-                <a class="navbar-brand fw-bold" href="{% url 'public_marketing:landing' %}">Pillar & Post</a>
+                <a class="navbar-brand fw-bold" href="{% url 'public_marketing:landing' %}">PILLAR & POST</a>
             {% else %}
-                <a class="navbar-brand fw-bold" href="/">Pillar & Post</a>
+                <a class="navbar-brand fw-bold" href="/">PILLAR & POST</a>
             {% endif %}
+            
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
@@ -56,5 +62,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
