--- a/marketing/templates/marketing/about.html
+++ b/marketing/templates/marketing/about.html
@@ -5,19 +5,31 @@
 {% block content %}
 <section class="py-5">
     <div class="container about-container">
-        <h1 class="brand-title mb-4">About Pillar & Post</h1>
-        <p class="lead">Pillar & Post helps recruitment agencies create beautiful, branded websites in minutes.</p>
-        
-        <h2 class="h4 mt-5 mb-3 feature-title">Platform Features</h2>
-        <ul class="feature-list">
-            <li>Instant branded job boards</li>
-            <li>Multiple professional themes</li>
-            <li>Custom color architecture</li>
-            <li>Intuitive job management</li>
-        </ul>
-        
-        <div class="mt-5 pt-4 border-top">
-            <a href="{% url 'public_marketing:template_select' %}" class="btn btn-primary">Get Started Free</a>
+        <div class="row align-items-center g-lg-5">
+            <div class="col-lg-7">
+                <span class="feature-label mb-2 d-inline-block">Our Story</span>
+                <h1 class="brand-title mb-4">About Pillar & Post</h1>
+                <p class="lead text-secondary mb-4">
+                    Pillar & Post helps recruitment agencies create beautiful, branded websites in minutes. We provide the structural integrity your digital presence needs.
+                </p>
+                
+                <h2 class="h4 mt-5 mb-3 feature-title">Features</h2>
+                <ul class="feature-list">
+                    <li>Instant branded job boards</li>
+                    <li>Multiple professional themes</li>
+                    <li>Custom color architecture</li>
+                    <li>Intuitive job management</li>
+                </ul>
+            </div>
+
+            <div class="col-lg-5">
+                <img src="/media/about/about-pp.jpg" class="img-fluid about-img-styled" alt="black and white photo of architectural pillars">
+            </div>
+        </div>
+
+        <div class="text-center mt-5 pt-5 border-top">
+            <h3 class="h5 mb-4">Ready to build your digital pillar?</h3>
+            <a href="{% url 'public_marketing:template_select' %}" class="btn btn-primary px-5">Get Started Free</a>
         </div>
     </div>
 </section>
